[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dnsboard"
version = "0.1.0"
description = "Real-time DNS, SSL, and uptime dashboard for your domains"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "flask",
    "dnspython",
    "python-whois",
    "requests",
]

[project.scripts]
dnsboard = "dnsboard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
